opencv.jsをFlutterWebで呼び出すテスト

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>contour</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="https://docs.opencv.org/3.4.1/opencv.js"></script>
+  <script src="my_javascript.js"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
